@@ -1,3 +1,11 @@
 idea for analysis:
 choose two time periods (say, 1940-1950 and 2005-2015). for each day in a given time period, take the average of the temperature on that day across the time period,
 and then plot the resulting two graphs on top of each other for easy comparison - CF
+
+
+analyse the specified month temperature in every year
+the histogram of average temperature
+the highest/lowest temperature
+etc
+- QL
+
